# terraform-azure-authentication-action

./: README.md  action.yaml  config.toml  fetch_kv_secret.py  logging-conf.yaml  pyproject.toml  setup_logging.py
